# flydelta

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  NOTICE  README.md  coverage.lcov  pyproject.toml
.github/workflows/: docker.yml  python.yml
flydelta/: __init__.py  cli.py  client.py  server.py
tests/: conftest.py  test_cli.py  test_client.py  test_init.py  test_server.py
