[project]
name = "flydelta"
version = "0.0.2"
description = "A Flight SQL proxy for Delta Lake"
authors = [{ name = "Simon Wörpel", email = "simon.woerpel@pm.me" }]
license = "AGPLv3+"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11,<4"
dependencies = [
    "pyarrow (>=22.0.0,<23.0.0)",
    "typer (>=0.17)",
    "rich (>=10.0.0,<15.0.0)",
]

[project.optional-dependencies]
server = [
    "deltalake (>=1.2.1,<2.0.0)",
    "duckdb (>=1.1.0,<2.0.0)",
]

[project.scripts]
flydelta = "flydelta.cli:cli"

[project.urls]
Homepage = "https://github.com/dataresearchcenter/flydelta"
Repository = "https://github.com/dataresearchcenter/flydelta"
Issues = "https://github.com/dataresearchcenter/flydelta/issues"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = ">=4.1,<8.0"
black = ">=23.11,<26.0"
isort = "^7.0.0"
mypy = "^1.17.1"
pre-commit = "^4.0.1"
flake8 = ">=6.1,<8.0"
ipdb = "^0.13.13"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
